# ferrompi

./: .gitignore  CHANGELOG.md  CICD_SIMPLIFICATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  crates.js  help.html  index.html  settings.html  src-files.js  test.sh
.github/: CI_CD.md  QUICK_REF.md  dependabot.yml  labeler.yml
.github/workflows/: benchmark.yml  docs.yml  pr-labels.yml  publish.yml  security.yml  test.yml
benches/: README.md  allreduce_roundtrip.rs  bench_smoke.rs  ffi_overhead.rs  persistent_vs_iallreduce.rs
benches/common/: mod.rs
csrc/: ferrompi.c  ferrompi.h
docs/: README.md  architecture.md  migrating-from-rsmpi.md  mpi-compatibility.md
docs/adr/: 0001-why-c-wrapper.md  0002-handle-tables.md  0003-generic-mpi-datatype.md  0004-persistent-collective-approach.md  0005-mpi-op-create.md
examples/: allreduce.rs  comm_split.rs  diag_minimal.rs  gatherv.rs  hello_world.rs  hybrid_openmp.rs  nonblocking.rs  persistent_bcast.rs  pi_monte_carlo.rs  ring.rs  scan.rs  shared_memory.rs  test_allgather_init_inplace.rs  test_allgather_inplace.rs  test_allreduce_bytes.rs  test_alltoall_init_inplace.rs  test_alltoall_inplace.rs  test_blocking_extra.rs  test_cancel.rs  test_collectives.rs  test_comm_from_group.rs  test_comm_split.rs  test_comm_table_concurrency.rs  test_create_from_group_null_handle.rs  test_custom_dt_contiguous.rs  test_custom_dt_p2p.rs  test_custom_dt_resized.rs  test_custom_dt_struct.rs  test_custom_dt_vector.rs  test_gather_init_inplace.rs  test_gather_inplace.rs  test_get_group_invalid_handle.rs  test_group_basic.rs  test_group_compare.rs  test_group_ranges.rs  test_group_set_ops.rs  test_group_translate.rs  test_iallgather_inplace.rs  test_ialltoall_inplace.rs  test_igather_inplace.rs  (+36 more)
ferrompi/: all.html  enum.DatatypeTag.html  enum.Error.html  enum.GroupComparison.html  enum.LockType.html  enum.MpiErrorClass.html  enum.ReduceOp.html  enum.SplitType.html  enum.ThreadLevel.html  enum.WinKind.html  index.html  sidebar-items.js  struct.Communicator.html  struct.CustomDatatype.html  struct.DoubleInt.html  struct.FloatInt.html  struct.Group.html  struct.HostEntry.html  struct.Info.html  struct.Int2.html  struct.LockAllGuard.html  struct.LockGuard.html  struct.LongDoubleInt.html  struct.LongInt.html  struct.Mpi.html  struct.PendingFetchResult.html  struct.PersistentRequest.html  struct.RankRange.html  struct.Request.html  struct.SharedWindow.html  struct.ShortInt.html  struct.SlurmInfo.html  struct.Status.html  struct.StructField.html  struct.TopologyInfo.html  struct.UserOp.html  struct.Win.html  struct.WinFenceAssert.html  struct.WinLockAllGuard.html  struct.WinLockGuard.html  (+6 more)
ferrompi/comm/: enum.SplitType.html  struct.Communicator.html
ferrompi/datatype/: enum.DatatypeTag.html  struct.DoubleInt.html  struct.FloatInt.html  struct.Int2.html  struct.LongDoubleInt.html  struct.LongInt.html  struct.ShortInt.html  trait.AtomicMpiDatatype.html  trait.BytePermutable.html  trait.MpiDatatype.html  trait.MpiIndexedDatatype.html
ferrompi/datatype_builder/: struct.CustomDatatype.html  struct.StructField.html
ferrompi/doc/: index.html  sidebar-items.js
ferrompi/error/: enum.Error.html  enum.MpiErrorClass.html  type.Result.html
ferrompi/group/: enum.GroupComparison.html  struct.Group.html  struct.RankRange.html
ferrompi/info/: struct.Info.html
ferrompi/op/: struct.UserOp.html
ferrompi/persistent/: struct.PersistentRequest.html
ferrompi/request/: struct.Request.html
ferrompi/slurm/: fn.cpus_per_task.html  fn.is_slurm_job.html  fn.job_id.html  fn.local_rank.html  fn.local_size.html  fn.node_list.html  fn.node_name.html  fn.num_nodes.html  index.html  sidebar-items.js
ferrompi/status/: struct.Status.html
ferrompi/topology/: struct.HostEntry.html  struct.SlurmInfo.html  struct.TopologyInfo.html
ferrompi/window/: enum.LockType.html  enum.WinKind.html  struct.LockAllGuard.html  struct.LockGuard.html  struct.PendingFetchResult.html  struct.SharedWindow.html  struct.Win.html  struct.WinFenceAssert.html  struct.WinLockAllGuard.html  struct.WinLockGuard.html  struct.WinPscwAssert.html
plans/code-coverage-improvement/: .implementation-state.json  00-master-plan.md  README.md
search.index/: 011cfe92ffa0.js  017fa1b6c641.js  01b9899d7a4a.js  02898bb43910.js  02ac02834c0c.js  03b0ec97a366.js  05f86a87a796.js  05fa013b4830.js  07b54c29a517.js  097539367c19.js  0a35705b7951.js  0a7e44d8dde5.js  0ad3317c81c1.js  0d5c73536a34.js  0d798ef23d69.js  0de6ab97b8cb.js  0fafa7ce1180.js  118c2e8fdc8c.js  11d173ca8993.js  11d29092821c.js  138c14988c35.js  1765c013d18a.js  17b81ed2e2dd.js  1b59090cfb53.js  1b6ccbf9e121.js  1bec8922c019.js  1d954e4f1dcb.js  1dd5aa06e613.js  1dfc1e321364.js  23e33a8540a3.js  248b71159741.js  2654d213025e.js  2727b5af48aa.js  27b6cb34167f.js  27c98ef55ecd.js  291443d95b3a.js  296f3bac0a66.js  298f170b4d1e.js  2af647cbab25.js  2b4a78467f52.js  (+69 more)
search.index/crateNames/: 92ee6a5d99f6.js
search.index/desc/: 6b45c6d27bb9.js  b2420df284f3.js  cded4a7c11a2.js  e074d1ffc0c0.js
search.index/entry/: 2a3299e53218.js  4e820717e048.js  95365e3efa65.js  c742dc8d4be0.js
search.index/function/: 1cbee128c7f6.js  731131ce5752.js  a8b6dea2392e.js  f0507a2af67b.js
search.index/generic_inverted_index/: 2f77616a5fe7.js  63432fad42ab.js  6df4536dff39.js  bd90f3dc3543.js
search.index/name/: 1a1c78f17df9.js  30c15e66ecaa.js  4d0b1d47fdbe.js  52735fa3bbef.js
search.index/normalizedName/: 314e6ee2fdcd.js  6efe764b1585.js  7e9bf1648e75.js  9b5a798bed1a.js
search.index/path/: 0bdc71662d16.js  4a60791e8c6e.js  a08b71e22428.js  c480b9588030.js
search.index/type/: 4ac96f5d507c.js  549c176a3766.js  7681c6e190fc.js  f877d168b3b5.js
src/: comm.rs  datatype.rs  datatype_builder.rs  doc.rs  error.rs  ffi.rs  group.rs  info.rs  lib.rs  op.rs  persistent.rs  request.rs  slurm.rs  status.rs  topology.rs  window.rs
src/comm/: blocking.rs  mgmt.rs  mod.rs  nonblocking.rs  p2p.rs  persistent.rs  v_collective.rs
src/ferrompi/: comm.rs.html  datatype.rs.html  (+14 more)
tests/: run_mpi_coverage.sh  run_mpi_tests.sh
(+53 files in other folders)
