[package]
name = "ferrompi"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
authors = ["Rogerio Alves"]
description = "A safe, generic Rust wrapper for MPI with support for MPI 4.0+ features, shared memory windows, and hybrid MPI+OpenMP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjmalves/ferrompi"
keywords = ["mpi", "hpc", "parallel", "distributed"]
categories = ["science", "concurrency"]

[lib]
name = "ferrompi"
path = "src/lib.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "ring"
path = "examples/ring.rs"

[[example]]
name = "allreduce"
path = "examples/allreduce.rs"

[[example]]
name = "persistent_bcast"
path = "examples/persistent_bcast.rs"

[[example]]
name = "nonblocking"
path = "examples/nonblocking.rs"

[[example]]
name = "pi_monte_carlo"
path = "examples/pi_monte_carlo.rs"

[[example]]
name = "hybrid_openmp"
path = "examples/hybrid_openmp.rs"

[[example]]
name = "comm_split"
path = "examples/comm_split.rs"

[[example]]
name = "scan"
path = "examples/scan.rs"

[[example]]
name = "gatherv"
path = "examples/gatherv.rs"

[[example]]
name = "shared_memory"
path = "examples/shared_memory.rs"
required-features = ["rma"]

[[example]]
name = "test_collectives"
path = "examples/test_collectives.rs"

[[example]]
name = "test_nonblocking"
path = "examples/test_nonblocking.rs"

[[example]]
name = "test_comm_split"
path = "examples/test_comm_split.rs"

[[example]]
name = "test_lifecycle"
path = "examples/test_lifecycle.rs"

[dependencies]
thiserror = "2.0"

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[dev-dependencies]
rand = "0.9"

[features]
default = []
# Enable RMA (Remote Memory Access) shared memory window operations
rma = []
# Enable NUMA-aware shared memory windows and SLURM helpers (implies rma)
numa = ["rma"]
# Enable detailed debug output
debug = []
